--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple chat engine example",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/zombiepaladin/simple-chat/issues"
   },
-  "homepage": "https://github.com/zombiepaladin/simple-chat#readme"
+  "homepage": "https://github.com/zombiepaladin/simple-chat#readme",
+  "dependencies": {
+    "socket.io": "^1.7.3"
+  },
+  "devDependencies": {}
 }
